# iari

./: requirements.txt  setup.cfg  wcdimportbot.py
src/: __init__.py
src/wcdimportbot/: __init__.py  __main__.py
