[metadata]
name = wcdimportbot
version = attr: src.wcdimportbot.__version__
description = WikiCitations Import Bot 
long_description = file: README.md
keywords = WikiCitations
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    marshmallow~=3.15.0
    mwparserfromhell
    requests~=2.27.1
    pydantic~=1.9.0
    pyssdb~=0.4.2
    python-dateutil~=2.8.2
    pytest
    rich~=11.2.0
    tld~=0.12.6
    #git+http://github.com/LeMyst/WikibaseIntegrator@v0.12.0rc3#egg=wikibaseintegrator
    #git+http://github.com/LeMyst/WikibaseIntegrator@rewrite-wbi#egg=wikibaseintegrator
    #git+http://github.com/LeMyst/WikibaseIntegrator@189b102bfa33ed66bea26e0de50674c062410542#egg=wikibaseintegrator
    # This implements https://github.com/LeMyst/WikibaseIntegrator/pull/341
    #git+https://github.com/dpriskorn/WikibaseIntegrator.git@patch-7#egg=wikibaseintegrator
    #git+http://github.com/LeMyst/WikibaseIntegrator@541da2ea02e9c386c4a1b83e15781869ea57d0cf#egg=wikibaseintegrator
    # This reintroduce something we need
    ###git+https://github.com/dpriskorn/WikibaseIntegrator.git@reintroduce_getting_conflicting_entity#egg=wikibaseintegrator
    #pywikibot~=7.2.0 we use the fork below to avoid annoying logging in the CLI
    ###git+http://github.com/dpriskorn/pywikibot@remove-verbose-logging#egg=pywikibot

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    wcdimportbot = wcdimportbot.__main__:main
    # wcdimportbot_a = src.__main__:main
