[metadata]
name = wcdimportbot
version = attr: .src.__init__.__version__
description = WikiCitations Import Bot
long_description = file: README.md
keywords = WikiCitations
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    wcdimportbot = src.__main__:main
